--- a/client/register.html
+++ b/client/register.html
@@ -1,110 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
         .register-container {
-            background: white;
-            padding: 2rem;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            max-width: 400px;
-            width: 100%;
+          background: white;
+          padding: 2rem;
+          border-radius: 5px;
+          box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+          max-width: 400px;
+          width: 100%;
         }
         .register-container h2 {
-            text-align: center;
+          text-align: center;
         }
         .form-group {
-            margin-bottom: 1rem;
+          margin-bottom: 1rem;
         }
         .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
+          display: block;
+          margin-bottom: 0.5rem;
         }
         .form-group input {
-            width: 100%;
-            padding: 0.8rem;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 3px;
+          width: 100%;
+          padding: 0.8rem;
+          box-sizing: border-box;
+          border: 1px solid #ccc;
+          border-radius: 3px;
         }
         .register-btn {
-            width: 100%;
-            padding: 0.8rem;
-            background-color: #2ecc71;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            font-size: 1rem;
-            cursor: pointer;
+          width: 100%;
+          padding: 0.8rem;
+          background-color: #2ecc71;
+          color: white;
+          border: none;
+          border-radius: 3px;
+          font-size: 1rem;
+          cursor: pointer;
         }
         .register-btn:hover {
-            background-color: #27ae60;
+          background-color: #27ae60;
         }
         .back-link {
-            display: block;
-            text-align: center;
-            margin-top: 1rem;
-            text-decoration: none;
-            color: #3498db;
+          display: block;
+          text-align: center;
+          margin-top: 1rem;
+          text-decoration: none;
+          color: #3498db;
         }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="register-container">
-        <h2>Регистрация</h2>
-        <form id="register-form">
-            <div class="form-group">
-                <label for="phone">Телефон</label>
-                <input type="text" id="phone" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Пароль</label>
-                <input type="password" id="password" required>
-            </div>
-            <button type="submit" class="register-btn">Зарегистрироваться</button>
-        </form>
-        <a href="login.html" class="back-link">← Назад к входу</a>
+      <h2>Регистрация</h2>
+      <form id="register-form">
+        <div class="form-group">
+          <label for="phone">Телефон</label>
+          <input type="text" id="phone" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Пароль</label>
+          <input type="password" id="password" required>
+        </div>
+        <button type="submit" class="register-btn">Зарегистрироваться</button>
+      </form>
+      <a href="login.html" class="back-link">← Назад к входу</a>
     </div>
 
     <script>
-        document.getElementById('register-form').addEventListener('submit', async function(e) {
-            e.preventDefault();
+    document.getElementById('register-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-            const phone = document.getElementById('phone').value;
-            const password = document.getElementById('password').value;
+    const phone = document.getElementById('phone').value;
+    const password = document.getElementById('password').value;
 
-            try {
-                const response = await fetch('http://localhost:8001/users/insert', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ phone, passwd: password, admin: false })
-                });
-
-                const result = await response.json();
-                if (result.status === 'ok') {
-                    alert('Регистрация успешна. Войдите в систему.');
-                    window.location.href = 'login.html';
-                } else {
-                    alert('Ошибка регистрации');
-                }
-            } catch (error) {
-                alert('Сервер не отвечает');
-                console.error('Ошибка регистрации:', error);
+    try {
+        // Вариант с query parameters
+        const response = await fetch(
+            `http://localhost:8001/users/insert?phone=${encodeURIComponent(phone)}&passwd=${encodeURIComponent(password)}&admin=false`, 
+            {
+                method: 'POST'
             }
-        });
+        );
+
+        const result = await response.json();
+        if (result.status === 'ok') {
+            alert('Регистрация успешна. Войдите в систему.');
+            window.location.href = 'login.html';
+        } else {
+            alert(result.message || 'Ошибка регистрации');
+        }
+    } catch (error) {
+        console.error('Ошибка регистрации:', error);
+        alert(error.message || 'Сервер не отвечает');
+    }
+});
     </script>
-</body>
+  </body>
 </html>
