new endpoint to table market and basket: change count_pos

--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автозапчасти - Каталог</title>
     <style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+      }
       header {
         background-color: #333;
         color: white;
@@ -34,17 +34,28 @@ body {
         border-radius: 5px;
         padding: 1rem;
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        display: flex;
+        flex-direction: column;
       }
       .product-card h3 {
         margin-top: 0;
+        margin-bottom: 0.5rem;
       }
       .product-card .price {
         font-weight: bold;
         color: #e67e22;
         font-size: 1.2rem;
+        margin: 0.5rem 0;
       }
       .product-card .stock {
         color: #27ae60;
+        margin: 0.5rem 0;
+      }
+      .product-card .description {
+        color: #666;
+        font-size: 0.9rem;
+        margin: 0.5rem 0;
+        flex-grow: 1;
       }
       .product-card button {
         background-color: #3498db;
@@ -198,6 +209,7 @@ body {
               <h3>${product.product_name}</h3>
               <div class="price">${product.price} руб.</div>
               <div class="stock">В наличии: ${product.cur_count_pos} шт.</div>
+              <div class="description">${product.description || 'Описание отсутствует'}</div>
               <div class="quantity-selector">
                 <button onclick="changeQuantity(this, -1, ${product.cur_count_pos})">-</button>
                 <input type="number" id="quantity-${product.id}" value="1" min="1" max="${product.cur_count_pos}" onchange="validateQuantity(this, ${product.cur_count_pos})">
@@ -205,8 +217,8 @@ body {
               </div>
               <button onclick="addToCart(${product.id}, '${product.product_name.replace(/'/g, "\\'")}', ${product.cur_count_pos})">
                 Добавить в корзину
-                </button>
-                `;
+              </button>
+            `;
             container.appendChild(productCard);
           });
         } catch (error) {
@@ -251,51 +263,51 @@ body {
             }
           });
 
-                if (!response.ok) throw new Error('Ошибка загрузки корзины');
-                const data = await response.json();
-                document.getElementById('cart-count').textContent = data.length || 0;
-              } catch (error) {
-                console.error('Ошибка обновления корзины:', error);
-              }
-          }
+          if (!response.ok) throw new Error('Ошибка загрузки корзины');
+          const data = await response.json();
+          document.getElementById('cart-count').textContent = data.length || 0;
+        } catch (error) {
+          console.error('Ошибка обновления корзины:', error);
+        }
+      }
 
-            async function addToCart(productId, productName, maxQuantity) {
-              const token = getCookie('access-token');
-              const userId = localStorage.getItem('userId');
-              const quantityInput = document.getElementById(`quantity-${productId}`);
-              let quantity = parseInt(quantityInput.value);
+      async function addToCart(productId, productName, maxQuantity) {
+        const token = getCookie('access-token');
+        const userId = localStorage.getItem('userId');
+        const quantityInput = document.getElementById(`quantity-${productId}`);
+        let quantity = parseInt(quantityInput.value);
 
-              // Проверка корректности количества
-              if (isNaN(quantity)) quantity = 1;
-              if (quantity < 1) quantity = 1;
-              if (quantity > maxQuantity) quantity = maxQuantity;
+        // Проверка корректности количества
+        if (isNaN(quantity)) quantity = 1;
+        if (quantity < 1) quantity = 1;
+        if (quantity > maxQuantity) quantity = maxQuantity;
 
-              if (!token || !userId) {
-                alert('Для добавления товаров в корзину необходимо авторизоваться');
-                window.location.href = 'login.html';
-                return;
-              }
+        if (!token || !userId) {
+          alert('Для добавления товаров в корзину необходимо авторизоваться');
+          window.location.href = 'login.html';
+          return;
+        }
 
-              try {
-                const response = await fetch(`http://localhost:8001/basket/insert?userId=${userId}&product_name=${encodeURIComponent(productName)}&cur_count=${quantity}`, {
-                  method: 'POST',
-                  headers: {
-                    'Authorization': `Bearer ${token}`
-                  }
-                });
-
-                const result = await response.json();
-                if (result.status) {
-                  alert(`Товар добавлен в корзину (${quantity} шт.)!`);
-                  await updateCartCount();
-                } else {
-                  alert('Ошибка при добавлении товара в корзину');
-                }
-              } catch (error) {
-                console.error('Ошибка добавления в корзину:', error);
-                alert('Ошибка при добавлении товара в корзину');
-              }
+        try {
+          const response = await fetch(`http://localhost:8001/basket/insert?userId=${userId}&product_name=${encodeURIComponent(productName)}&cur_count=${quantity}`, {
+            method: 'POST',
+            headers: {
+              'Authorization': `Bearer ${token}`
             }
+          });
+
+          const result = await response.json();
+          if (result.status) {
+            alert(`Товар добавлен в корзину (${quantity} шт.)!`);
+            await updateCartCount();
+          } else {
+            alert('Ошибка при добавлении товара в корзину');
+          }
+        } catch (error) {
+          console.error('Ошибка добавления в корзину:', error);
+          alert('Ошибка при добавлении товара в корзину');
+        }
+      }
     </script>
   </body>
 </html>
