--- a/client/basket.html
+++ b/client/basket.html
@@ -85,6 +85,34 @@
         color: #3498db;
         text-decoration: none;
       }
+      .quantity-selector {
+        display: flex;
+        align-items: center;
+        margin: 0.5rem 0;
+      }
+      .quantity-selector input {
+        width: 50px;
+        padding: 0.3rem;
+        text-align: center;
+        margin: 0 0.5rem;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+      }
+      .quantity-selector button {
+        background-color: #ddd;
+        color: #333;
+        border: none;
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        border-radius: 3px;
+      }
+      .quantity-selector button:hover {
+        background-color: #ccc;
+      }
     </style>
   </head>
   <body>
@@ -132,6 +160,15 @@
         }
       }
 
+      async function getUserId() {
+        const userPhone = localStorage.getItem('userPhone');
+        if (!userPhone) return null;
+        
+        const idResponse = await fetch(`http://localhost:8001/users/get_id?phone=${encodeURIComponent(userPhone)}`);
+        const idData = await idResponse.json();
+        return idData.id;
+      }
+
       async function loadCart() {
         try {
           const token = getCookie('access-token');
@@ -140,15 +177,11 @@
             return;
           }
 
-          const userPhone = localStorage.getItem('userPhone');
-          if (!userPhone) {
+          const userId = await getUserId();
+          if (!userId) {
             alert('Ошибка идентификации пользователя');
             return;
           }
-
-          const idResponse = await fetch(`http://localhost:8001/users/get_id?phone=${encodeURIComponent(userPhone)}`);
-          const idData = await idResponse.json();
-          const userId = idData.id;
 
           const response = await fetch(`http://localhost:8001/basket/get_basket_user?userId=${userId}`, {
             headers: {
@@ -171,7 +204,7 @@
           const productsResponse = await fetch('http://localhost:8001/market/get_data');
           const products = await productsResponse.json();
 
-          items.forEach(item => {
+          for (const item of items) {
             const product = products.find(p => p.product_name === item.product_name);
             if (product) {
               const itemTotal = product.price * item.user_count_pos;
@@ -181,17 +214,23 @@
               itemElement.className = 'cart-item';
               itemElement.innerHTML = `
                 <div class="cart-item-info">
-                    <h3>${item.product_name}</h3>
-                    <div>Количество: ${item.user_count_pos}</div>
-                    <div>Цена: ${product.price} руб. × ${item.user_count_pos} = ${itemTotal} руб.</div>
+                  <h3>${item.product_name}</h3>
+                  <div class="quantity-selector">
+                    <button onclick="changeQuantity(this, -1, '${item.product_name}', ${product.cur_count_pos})">-</button>
+                    <input type="number" id="quantity-${item.product_name.replace(/ /g, '_')}" 
+                           value="${item.user_count_pos}" min="1" max="${product.cur_count_pos}" 
+                           onchange="updateQuantity('${item.product_name}', ${product.cur_count_pos})">
+                    <button onclick="changeQuantity(this, 1, '${item.product_name}', ${product.cur_count_pos})">+</button>
+                  </div>
+                  <div>Цена: ${product.price} руб. × ${item.user_count_pos} = ${itemTotal} руб.</div>
                 </div>
                 <div class="cart-item-actions">
-                    <button onclick="removeFromCart('${item.product_name}', ${userId})">Удалить</button>
+                  <button onclick="removeFromCart('${item.product_name}')">Удалить</button>
                 </div>
               `;
               container.appendChild(itemElement);
             }
-          });
+          }
 
           document.getElementById('total-price').textContent = total;
         } catch (error) {
@@ -199,10 +238,55 @@
         }
       }
 
-      async function removeFromCart(productName, userId) {
+      async function changeQuantity(button, delta, productName, maxQuantity) {
+        const input = button.parentElement.querySelector('input');
+        let newValue = parseInt(input.value) + delta;
+
+        if (newValue < 1) newValue = 1;
+        if (newValue > maxQuantity) newValue = maxQuantity;
+
+        input.value = newValue;
+        await updateQuantity(productName, maxQuantity);
+      }
+
+      async function updateQuantity(productName, maxQuantity) {
+        const input = document.getElementById(`quantity-${productName.replace(/ /g, '_')}`);
+        let quantity = parseInt(input.value);
+
+        if (isNaN(quantity)) quantity = 1;
+        if (quantity < 1) quantity = 1;
+        if (quantity > maxQuantity) quantity = maxQuantity;
+
+        input.value = quantity;
+
         try {
           const token = getCookie('access-token');
-          if (!token) {
+          const userId = await getUserId();
+          if (!token || !userId) return;
+
+          const response = await fetch(`http://localhost:8001/basket/change_count_pos?product_name=${encodeURIComponent(productName)}&new_count_pos=${quantity}`, {
+            method: 'PUT',
+            headers: {
+              'Authorization': `Bearer ${token}`
+            }
+          });
+
+          const result = await response.json();
+          if (result.status) {
+            loadCart(); // Обновляем корзину после изменения количества
+          } else {
+            alert('Не удалось изменить количество товара');
+          }
+        } catch (error) {
+          console.error('Ошибка изменения количества:', error);
+        }
+      }
+
+      async function removeFromCart(productName) {
+        try {
+          const token = getCookie('access-token');
+          const userId = await getUserId();
+          if (!token || !userId) {
             window.location.href = 'login.html';
             return;
           }
@@ -216,8 +300,7 @@
 
           const result = await response.json();
           if (result.status === "ok") {
-            alert('Товар удален из корзины!');
-            loadCart();
+            loadCart(); // Обновляем корзину после удаления
           }
         } catch (error) {
           console.error('Ошибка удаления из корзины:', error);
@@ -227,20 +310,11 @@
       async function checkout() {
         try {
           const token = getCookie('access-token');
-          if (!token) {
+          const userId = await getUserId();
+          if (!token || !userId) {
             window.location.href = 'login.html';
             return;
           }
-
-          const userPhone = localStorage.getItem('userPhone');
-          if (!userPhone) {
-            alert('Ошибка идентификации пользователя');
-            return;
-          }
-
-          const idResponse = await fetch(`http://localhost:8001/users/get_id?phone=${encodeURIComponent(userPhone)}`);
-          const idData = await idResponse.json();
-          const userId = idData.id;
 
           const response = await fetch('http://localhost:8001/orders/insert', {
             method: 'POST',
@@ -269,4 +343,3 @@
     </script>
   </body>
 </html>
-
