--- a/client/cl_admin/index.html
+++ b/client/cl_admin/index.html
@@ -11,8 +11,8 @@
         <h1>Admin Login</h1>
         <form id="loginForm">
             <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="text" id="phone" name="phone" required>
+                <label for="login">Login:</label>
+                <input type="text" id="login" name="login" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
