new page orders

--- a/client/cl_admin/admin.html
+++ b/client/cl_admin/admin.html
@@ -16,6 +16,7 @@
             <li><a href="#" id="dashboardLink">Dashboard</a></li>
             <li><a href="users.html" id="usersLink">Users</a></li>
             <li><a href="market.html" id="marketLink">Market</a></li>
+            <li><a href="orders.html" id="ordersLink">Orders</a></li>
         </ul>
     </nav>
     <main>
