--- a/client/cl_admin/market.html
+++ b/client/cl_admin/market.html
@@ -16,6 +16,7 @@
             <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
             <li><a href="users.html" id="usersLink">Users</a></li>
             <li><a href="#" id="marketLink" class="active">Market</a></li>
+            <li><a href="orders.html" id="ordersLink">Orders</a></li>
         </ul>
     </nav>
     <main>
