--- a/client/cl_admin/users.html
+++ b/client/cl_admin/users.html
@@ -16,6 +16,7 @@
             <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
             <li><a href="#" id="usersLink" class="active">Users</a></li>
             <li><a href="market.html" id="marketLink">Market</a></li>
+            <li><a href="orders.html" id="ordersLink">Orders</a></li>
         </ul>
     </nav>
     <main>
