--- a/client/cl_admin/orders.html
+++ b/client/cl_admin/orders.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Orders</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Admin Panel - Orders</h1>
-        <button id="logoutBtn" class="btn">Logout</button>
+      <h1>Admin Panel - Orders</h1>
+      <button id="logoutBtn" class="btn">Logout</button>
     </header>
     <nav>
-        <ul>
-            <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
-            <li><a href="users.html" id="usersLink">Users</a></li>
-            <li><a href="market.html" id="marketLink">Market</a></li>
-            <li><a href="#" id="ordersLink" class="active">Orders</a></li>
-        </ul>
+      <ul>
+        <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
+        <li><a href="users.html" id="usersLink">Users</a></li>
+        <li><a href="market.html" id="marketLink">Market</a></li>
+        <li><a href="#" id="ordersLink" class="active">Orders</a></li>
+      </ul>
     </nav>
     <main>
-        <div class="actions">
-            <button id="refreshOrdersBtn" class="btn">Refresh List</button>
-        </div>
-        <table id="ordersTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>User ID</th>
-                    <th>Product ID</th>
-                    <th>Quantity</th>
-                    <th>Total Price</th>
-                    <th>Status</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Orders will be loaded here -->
-            </tbody>
-        </table>
+      <div class="actions">
+        <button id="refreshOrdersBtn" class="btn">Refresh List</button>
+      </div>
+      <table id="ordersTable">
+        <!-- Измененный фрагмент таблицы в orders.html -->
+        <thead>
+          <tr>
+            <th>OrderID</th>
+            <th>User Phone</th>
+            <th>Products</th>
+            <th class="sortable" data-sort="total_price">Total Price</th>
+            <th>Status</th>
+            <th class="sortable" data-sort="date">Date</th>
+          </tr>
+        </thead
+        ><tbody>
+          <!-- Orders will be loaded here -->
+        </tbody>
+      </table>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
