--- a/client/cl_admin/market.html
+++ b/client/cl_admin/market.html
@@ -1,71 +1,77 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Market</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <!-- Добавить в head -->
+  </head>
+  <body>
     <header>
-        <h1>Admin Panel - Market</h1>
-        <button id="logoutBtn" class="btn">Logout</button>
+      <h1>Admin Panel - Market</h1>
+      <button id="logoutBtn" class="btn">Logout</button>
     </header>
     <nav>
-        <ul>
-            <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
-            <li><a href="users.html" id="usersLink">Users</a></li>
-            <li><a href="#" id="marketLink" class="active">Market</a></li>
-            <li><a href="orders.html" id="ordersLink">Orders</a></li>
-        </ul>
+      <ul>
+        <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
+        <li><a href="users.html" id="usersLink">Users</a></li>
+        <li><a href="#" id="marketLink" class="active">Market</a></li>
+        <li><a href="orders.html" id="ordersLink">Orders</a></li>
+      </ul>
     </nav>
     <main>
-        <div class="actions">
-            <button id="addProductBtn" class="btn">Add Product</button>
-            <button id="refreshProductsBtn" class="btn">Refresh List</button>
-        </div>
-        <table id="productsTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Products will be loaded here -->
-            </tbody>
-        </table>
+      <div class="actions">
+        <button id="addProductBtn" class="btn">Add Product</button>
+        <button id="refreshProductsBtn" class="btn">Refresh List</button>
+      </div>
+      <table id="productsTable">
+        <thead>
+          <tr>
+            <th class="sortable" data-sort="id">ID</th
+            ><th>Name</th>
+            <th>Description</th>
+            <th class="sortable" data-sort="price">Price</th>
+            <th class="sortable" data-sort="quantity">Quantity</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Products will be loaded here -->
+        </tbody>
+      </table>
     </main>
     <div id="productModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2 id="productModalTitle">Add Product</h2>
-            <form id="productForm">
-                <input type="hidden" id="productId">
-                <div class="form-group">
-                    <label for="productName">Name:</label>
-                    <input type="text" id="productName" required>
-                </div>
-                <div class="form-group">
-                    <label for="productDescription">Description:</label>
-                    <textarea id="productDescription" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="productPrice">Price:</label>
-                    <input type="number" id="productPrice" step="0.01" required>
-                </div>
-                <div class="form-group">
-                    <label for="productQuantity">Quantity:</label>
-                    <input type="number" id="productQuantity" required>
-                </div>
-                <button type="submit" class="btn">Save</button>
-            </form>
-        </div>
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="productModalTitle">Add Product</h2>
+        <form id="productForm">
+          <input type="hidden" id="productId">
+          <div class="form-group">
+            <label for="productName">Name:</label>
+            <input type="text" id="productName" required>
+          </div>
+          <div class="form-group">
+            <label for="productDescription">Description:</label>
+            <textarea id="productDescription" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="productPrice">Price:</label>
+            <input type="number" id="productPrice" step="0.01" required>
+          </div>
+          <div class="form-group">
+            <label for="productQuantity">Quantity:</label>
+            <input type="number" id="productQuantity" required>
+          </div>
+          <div class="form-group">
+            <label for="productImage">Изображение товара:</label>
+            <input type="file" id="productImage" accept="image/jpeg, image/png">
+          </div>
+          <button type="submit" class="btn">Save</button>
+        </form>
+        <!-- Вставить перед закрывающим тегом </form> в модальном окне -->
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
