--- a/client/cl_admin/users.html
+++ b/client/cl_admin/users.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Users</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Admin Panel - Users</h1>
-        <button id="logoutBtn" class="btn">Logout</button>
+      <h1>Admin Panel - Users</h1>
+      <button id="logoutBtn" class="btn">Logout</button>
     </header>
     <nav>
-        <ul>
-            <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
-            <li><a href="#" id="usersLink" class="active">Users</a></li>
-            <li><a href="market.html" id="marketLink">Market</a></li>
-            <li><a href="orders.html" id="ordersLink">Orders</a></li>
-        </ul>
+      <ul>
+        <li><a href="admin.html" id="dashboardLink">Dashboard</a></li>
+        <li><a href="#" id="usersLink" class="active">Users</a></li>
+        <li><a href="market.html" id="marketLink">Market</a></li>
+        <li><a href="orders.html" id="ordersLink">Orders</a></li>
+      </ul>
     </nav>
     <main>
-        <div class="actions">
-            <button id="refreshUsersBtn" class="btn">Refresh List</button>
-        </div>
-        <table id="usersTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Phone</th>
-                    <th>Balance</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Users will be loaded here -->
-            </tbody>
-        </table>
+      <div class="actions">
+        <button id="refreshUsersBtn" class="btn">Refresh list</button>
+        <input type="text" id="searchPhone" placeholder="Phone number search">
+        <button id="searchBtn" class="btn">Find</button>
+      </div>
+      <table id="usersTable">
+        <thead>
+          <tr>
+            <th class="sortable" data-sort="id">ID</th>
+            <th>Phone</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Users will be loaded here -->
+        </tbody>
+      </table>
     </main>
     <div id="editUserModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Edit User</h2>
-            <form id="editUserForm">
-                <input type="hidden" id="editUserId">
-                <div class="form-group">
-                    <label for="editPhone">Phone:</label>
-                    <input type="text" id="editPhone" required>
-                </div>
-                <div class="form-group">
-                    <label for="editBalance">Balance:</label>
-                    <input type="number" id="editBalance" required>
-                </div>
-                <button type="submit" class="btn">Save Changes</button>
-            </form>
-        </div>
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Edit User</h2>
+        <form id="editUserForm">
+          <input type="hidden" id="editUserId">
+          <div class="form-group">
+            <label for="editPhone">Phone:</label>
+            <input type="text" id="editPhone" required>
+          </div>
+          <button type="submit" class="btn">Save Changes</button>
+        </form>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
