add search by name product in adm panel

--- a/client/cl_admin/market.html
+++ b/client/cl_admin/market.html
@@ -24,6 +24,8 @@
       <div class="actions">
         <button id="addProductBtn" class="btn">Add Product</button>
         <button id="refreshProductsBtn" class="btn">Refresh List</button>
+        <input type="text" id="searchProduct" placeholder="Search by product name">
+        <button id="searchProductBtn" class="btn">Search</button>
       </div>
       <table id="productsTable">
         <thead>
